--- a/style.css
+++ b/style.css
@@ -455,6 +455,7 @@ section {
 @media only screen and (max-width:560px){
     .recipe-img {
         width: 80vw;
+        height: 60vh;
     }
 
     .hero-inner {
@@ -476,5 +477,6 @@ section {
 @media only screen and (max-width:425px){
     .recipe-img{
         width: 100%;
+        height: 50vh;
     }
 }
